# openclassrooms-projet14

./: .gitignore
.github/workflows/: ci.yml
backend/: conftest.py  pyproject.toml
backend/src/: auth.py  database.py  dependencies.py  main.py  models.py
backend/src/routes/: auth.py  chat.py  review.py
backend/src/utils/: news.py  rag.py
backend/tests/: test_chat_auth.py
frontend/: package-lock.json
frontend/src/app/: page.tsx
frontend/src/app/chat/[id]/: page.tsx
frontend/src/app/login/: page.tsx
