[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
    "bcrypt>=4.3.0",
    "python-jose[cryptography]>=3.5.0",
    "pydantic-ai>=2.5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "pydantic-ai-slim[mistral]>=2.5.0",
    "mistralai>=2.6.0",
    "llama-index>=0.14.23",
    "llama-index-embeddings-huggingface>=0.7.0",
]
